[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxr-protocol"
author = "Blaise Thompson"
readme = "README.md"
dynamic = ["version"]
license = "MIT"
requires-python = ">=3.7"
dependencies = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Source = "https://github.com/yaq-project/proxr-protocol"
Issues = "https://github.com/yaq-project/proxr-protocol/issues"

[project.optional-dependencies]
dev = ["black", "pre-commit"]

[tool.hatch.version]
path = "proxr_protocol/__version__.py"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
